# pr-agent

./: CHANGES.md  NOTICE  README.md  action.yml  pyproject.toml  requirements.txt
docs/: how-it-works-explained.md  mcp-local.md  oauth-cli-mode.md  orchestrator-integration.md
docs/examples/: mcp-claude-code.json  mcp-codex-config.toml  org-anchor-reusable-workflow.yml  single-repo-pr-review.yml
pr_agent/agent/: pr_agent.py
pr_agent/algo/ai_handlers/: cli_ai_handler.py
pr_agent/git_providers/: codecommit_client.py
pr_agent/servers/: cli_action_runner.py  mcp_http_server.py  mcp_server.py
pr_agent/settings/: configuration.toml
pr_agent/tools/: ticket_pr_compliance_check.py
tests/unittest/: test_cli_ai_handler.py  test_mcp_http_server.py  test_mcp_server.py  test_ticket_pr_compliance_check.py
