[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-agent"
version = "0.36.1"

authors = [
  { name = "QodoAI", email = "ofir.f@qodo.ai" },
]

maintainers = [
  { name = "Naor Peled", email = "me@naor.dev" },
  { name = "Ofir Friedman", email = "ofir.f@qodo.ai" },
]

description = "PR-Agent aims to help efficiently review and handle pull requests, by providing AI feedback and suggestions."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["AI", "Agents", "Pull Request", "Automation", "Code Review"]
license = { file = "LICENSE" }

classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

# Fork extras. The base install stays slim (GitHub + OpenAI/Anthropic API, or the
# CLI/OAuth subscription handler). Heavy cloud SDKs are opt-in:
#   pip install "pr-agent[mcp]"     # local MCP server
#   pip install "pr-agent[aws]"     # AWS CodeCommit / Bedrock / Secrets Manager
#   pip install "pr-agent[azure]"   # Azure DevOps / Azure OpenAI
#   pip install "pr-agent[gcp]"     # Google Vertex AI / GCS secrets
#   pip install "pr-agent[clouds]"  # all of the above cloud SDKs
[project.optional-dependencies]
mcp = ["mcp>=1.2"]
aws = ["boto3==1.40.45"]
azure = ["azure-devops==7.1.0b4", "azure-identity==1.25.0"]
gcp = ["google-cloud-aiplatform==1.154.0", "google-cloud-storage==2.10.0"]
clouds = ["pr-agent[aws,azure,gcp]"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
"Homepage" = "https://github.com/the-pr-agent/pr-agent"
"Documentation" = "https://docs.pr-agent.ai/"
"Repository" = "https://github.com/the-pr-agent/pr-agent"
"Issues" = "https://github.com/the-pr-agent/pr-agent/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "pr_agent*",
] # include pr_agent and any sub-packages it finds under it.

[project.scripts]
pr-agent = "pr_agent.cli:run"
pr-agent-mcp = "pr_agent.servers.mcp_server:main"

[tool.ruff]
line-length = 120

lint.select = [
  "E",    # Pyflakes
  "F",    # Pyflakes
  "B",    # flake8-bugbear
  "I001", # isort basic checks
  "I002", # isort missing-required-import
]

# First commit - only fixing isort
lint.fixable = [
  "I001", # isort basic checks
]

lint.unfixable = [
  "B", # Avoid trying to fix flake8-bugbear (`B`) violations.
]

lint.exclude = ["api/code_completions"]

lint.ignore = ["E999", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "E402",
] # Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
tests = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--color=yes"
console_output_style = "progress"
